# onport

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  project-spec.md
src/: docker.rs  kill.rs  main.rs  process_detail.rs  services.rs  types.rs
src/output/: json.rs  mod.rs  table.rs  watch.rs
src/platform/: freebsd.rs  linux.rs  macos.rs  mod.rs  windows.rs
tests/: cli.rs
